deploy/mightyfine/mighty-fine-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mighty-fine
  namespace: dev
  annotations:
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mighty-fine
  template:
    metadata:
      labels:
        app: mighty-fine
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/brice/metrics-demo:master
        command:
        - ./mightyfine
        - --port=3000
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
