deploy/mightyfine/mighty-fine-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mightyfine
  namespace: dev
spec:
  type: ClusterIP
  ports:
   - port: 3000
     targetPort: 3000
     protocol: TCP
     name: http
   selector:
     app: mightyfine
